[package]
name = "tower_defence_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy)
[profile.dev.package."*"]
opt-level = 3


[dependencies]
bevy = {version = "0.10.1", features = ["serialize"]}
bevy-inspector-egui = "0.18.3"
bevy_asset_loader = "0.16.0"
bevy_common_assets = {version = "0.6.0", features = ["ron"]}
bevy_ecs_tilemap = "0.10.0"
bevy_editor_pls = {git = "https://github.com/PhaestusFox/bevy_editor_pls"}
rand = "0.8.5"
ron = "0.8.0"
serde = {version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
strum = "0.24.1"
strum_macros = "0.24.3"

[build-dependencies]
embed-resource = "2.1.1"
