[package]
name = "tower_defence_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy)
[profile.dev.package."*"]
opt-level = 3


[dependencies]
# Bevy crates
bevy = {version = "0.10.1", features = ["serialize"]}
bevy-inspector-egui = "0.18.3"
bevy_asset_loader = "0.16.0"
bevy_common_assets = {version = "0.6.0", features = ["ron"]}
bevy_ecs_tilemap = "0.10.0"

# Rust crates
rand = "0.10.0"
ron = "0.12.0"
serde = {version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
strum = "0.27.2"
strum_macros = "0.27.2"

[build-dependencies]
embed-resource = "3.0.6"
